<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calendarFragment"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_tab"/>

    <item
        android:id="@+id/addFragment"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add_tab"/>

    <item
        android:id="@+id/checklistFragment"
        android:enabled="true"
        android:icon="@drawable/ic_checklist"
        android:title="@string/checklist_tab" />

    <item
        android:id="@+id/archiveFragment"
        android:enabled="true"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive_tab" />
</menu>